--- a/shoes_care/pubspec.yaml
+++ b/shoes_care/pubspec.yaml
@@ -51,6 +51,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/snc_no_backgroundHD.png
+    - assets/high.jpg
+    - assets/jord.jpg
+    - assets/snc_kiri.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
