--- a/shoes_care/pubspec.yaml
+++ b/shoes_care/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
 
   #setting UI
   settings_ui: 1.0.0
+  #rule on forms
+  rules: ^2.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
