--- a/shoes_care/android/app/src/main/AndroidManifest.xml
+++ b/shoes_care/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.shoes_care">
    <application
-        android:label="shoes_care"
+        android:label="Shoes Care"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
